--- a/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
+++ b/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
@@ -55,6 +55,12 @@
     <Compile Include="DrawingForm.Designer.cs">
       <DependentUpon>DrawingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LeastSquaresForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LeastSquaresForm.Designer.cs">
+      <DependentUpon>LeastSquaresForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Math\LeastSquares.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -87,6 +93,9 @@
     </Compile>
     <EmbeddedResource Include="DrawingForm.resx">
       <DependentUpon>DrawingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LeastSquaresForm.resx">
+      <DependentUpon>LeastSquaresForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -123,9 +132,7 @@
   <ItemGroup>
     <None Include="Resources\clear.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service References\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
