Реализованы методы RealizationSet.Run(), RealizationSet.GetTimes(), RealizationSet.GetVelocities(). Реализована возможность выбора способа записи статистики (для рисования и для запуска многих реализаций)

--- a/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
+++ b/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Forms\AveragingForm.Designer.cs">
       <DependentUpon>AveragingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\WaitForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WaitForm.Designer.cs">
+      <DependentUpon>WaitForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Math\Averaging.cs" />
     <Compile Include="DrawingHelper.cs" />
     <Compile Include="Geometry\Circle.cs" />
@@ -111,6 +117,9 @@
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\WaitForm.resx">
+      <DependentUpon>WaitForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -143,9 +152,7 @@
   <ItemGroup>
     <None Include="Resources\clear.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service References\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
