--- a/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
+++ b/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
@@ -99,12 +99,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealizationSet.cs" />
+    <Compile Include="Scatterers\RandomScattererSet.cs" />
     <Compile Include="Scatterers\Scatterer.cs" />
     <Compile Include="Scatterers\ScattererHarmonic.cs" />
     <Compile Include="Scatterers\ScattererPeriodic.cs" />
+    <Compile Include="Scatterers\ScattererRandom.cs" />
     <Compile Include="Scenes\SceneBase.cs" />
-    <Compile Include="Scenes\ScenePeriodic.cs" />
-    <Compile Include="Scenes\SceneSquereLattice.cs" />
+    <Compile Include="Scenes\SceneRandom.cs" />
+    <Compile Include="Scenes\SceneSquareBase.cs" />
+    <Compile Include="Scenes\SceneSquareLattice.cs" />
     <Compile Include="StatesOfParticle\StateOfParticle.cs" />
     <Compile Include="StatesOfParticle\StateOfParticleDetailed.cs" />
     <Compile Include="Functions\TestFunction.cs" />
@@ -158,7 +161,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
