Написана запись в файл

--- a/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
+++ b/SuperdiffusionInBilliards/SuperdiffusionInBilliards.csproj
@@ -73,6 +73,9 @@
     <Compile Include="Forms\StatisticForm.Designer.cs">
       <DependentUpon>StatisticForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WritingInFile\TitlesInFile.cs" />
+    <Compile Include="WritingInFile\Parameter.cs" />
+    <Compile Include="SuperdiffusionStatisticsSettings.cs" />
     <Compile Include="WritingInFile\LineInFile.cs" />
     <Compile Include="Math\Averaging.cs" />
     <Compile Include="GraphDrawing\DrawingHelper.cs" />
@@ -182,7 +185,12 @@
   <ItemGroup>
     <None Include="Resources\clear.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="StatisticFormSettings.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
